--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,6 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
-library(typos)
 ```
 
 # typos <img src="logo.png" align="right" height=139 />
@@ -24,7 +23,7 @@ The goal of `typos` is to provide a flexible warning when commonly mis-typed fun
 
 ## Installation
 
-You can install the development version of `typos` from [GitHub](https://github.com/) with:
+You can install the development version of `typos` from [Github.com/MyKo101/typos](https://github.com/MyKo101/typos) with:
 
 ```
 # install.packages("devtools")
@@ -32,8 +31,15 @@ devtools::install_github("MyKo101/typos")
 ```
 ## Example
 
-For example, without `typos` installed, mistyping the functions `names()` as `nameS()` will throw an error. But, with `typos`, the function is still evaluated, and rather than an Error, a Warning is produced.
+For example, without `typos` installed, mistyping the functions `names()` as `nameS()` will throw an error.
+```{r nameS-error, error=T}
+nameS(iris)
+```
+
+
+But, with `typos`, the function is still evaluated, and rather than an Error, a Warning is produced.
 ```{r nameS-typo}
+library(typos)
 nameS(iris)
 ```
 
